[package]
name = "ghostport"
version = "0.1.0"
edition = "2021"
authors = ["sad <sad@poptart.cat>", "perp"]
description = "A high performance port spoofing tool to confuse port scanners."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.43", features = ["derive"] }
rand = "0.9.2"
regex = "1.12.2"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
